--- a/Portfólio/index.html
+++ b/Portfólio/index.html
@@ -22,13 +22,13 @@
                 <a class="apresentacao_links_botao" href="https://github.com" target="_blank">
                   <img src="./assets/github.png" alt="icon github">GitHub
                 </a>
-                <a class="apresentacao_links_botao" href="https://instagram.com/__vitao03" target="_blank">
+                <a class="apresentacao_links_botao" href="https://www.google.com/search?q=imagem+dedo+do+meio&sca_esv=598871147&rlz=1C1GCEU_pt-BRBR1053BR1053&tbm=isch&sxsrf=ACQVn089QYJPpnjK9IgMO53R7MbvaS5lag:1705434698555&source=lnms&sa=X&sqi=2&ved=2ahUKEwi2hpSr1-KDAxUag5UCHRmqCPIQ_AUoAXoECAEQAw&biw=1707&bih=771&dpr=0.8#imgrc=xmTdesu_3nQP1M" target="_blank">
                   <img src="./assets/instagram.png" alt="icon instagram">Instagram
                 </a>
-                <a class="apresentacao_links_botao" href="https://linkedin.com" target="_blank">
+                <a class="apresentacao_links_botao" href="https://www.google.com/search?q=imagem+dedo+do+meio&sca_esv=598871147&rlz=1C1GCEU_pt-BRBR1053BR1053&tbm=isch&sxsrf=ACQVn089QYJPpnjK9IgMO53R7MbvaS5lag:1705434698555&source=lnms&sa=X&sqi=2&ved=2ahUKEwi2hpSr1-KDAxUag5UCHRmqCPIQ_AUoAXoECAEQAw&biw=1707&bih=771&dpr=0.8#imgrc=xmTdesu_3nQP1M" target="_blank">
                   <img src="./assets/linkedin.png" alt="icon linkedin">Linkedin
                 </a>
-                <a class="apresentacao_links_botao" href="https://www.twitch.tv/tck10" target="_blank">
+                <a class="apresentacao_links_botao" href="https://www.google.com/search?q=imagem+dedo+do+meio&sca_esv=598871147&rlz=1C1GCEU_pt-BRBR1053BR1053&tbm=isch&sxsrf=ACQVn089QYJPpnjK9IgMO53R7MbvaS5lag:1705434698555&source=lnms&sa=X&sqi=2&ved=2ahUKEwi2hpSr1-KDAxUag5UCHRmqCPIQ_AUoAXoECAEQAw&biw=1707&bih=771&dpr=0.8#imgrc=xmTdesu_3nQP1M" target="_blank">
                   <img src="./assets/twitch.png" alt="icon github">Twitch
                 </a>
                 <a class="apresentacao_links_botao" href="https://www.google.com/search?q=imagem+dedo+do+meio&sca_esv=598871147&rlz=1C1GCEU_pt-BRBR1053BR1053&tbm=isch&sxsrf=ACQVn089QYJPpnjK9IgMO53R7MbvaS5lag:1705434698555&source=lnms&sa=X&sqi=2&ved=2ahUKEwi2hpSr1-KDAxUag5UCHRmqCPIQ_AUoAXoECAEQAw&biw=1707&bih=771&dpr=0.8#imgrc=xmTdesu_3nQP1M" target="_blank">
